# gltut

./: CMakeLists.txt  README.md
Tut01HelloTriangle/: CMakeLists.txt  tut1.cpp
Tut02PlayingWithColors/: CMakeLists.txt  FragPosition.cpp  VertexColors.cpp
Tut02PlayingWithColors/data/: FragPosition.frag
Tut03OpenGLsMovingTriangle/: CMakeLists.txt  cpuPositionOffset.cpp  fragChangeColor.cpp  vertCalcOffset.cpp  vertPositionOffset.cpp
Tut04ObjectsAtRest/: AspectRatio.cpp  CMakeLists.txt  MatrixPerspective.cpp  OrthoCube.cpp  ShaderPerspective.cpp
Tut05ObjectsInDepth/: BaseVertexOverlap.cpp  CMakeLists.txt  DepthBuffer.cpp  DepthClamping.cpp  DepthFighting.cpp  OverlapNoDepth.cpp  VertexClipping.cpp  test1.txt
Tut06ObjectsInMotion/: CMakeLists.txt  Hierarchy.cpp  Rotations.cpp  Scale.cpp  Translation.cpp
Tut07WorldInMotion/: CMakeLists.txt  WorldScene.cpp  WorldWithUBO.cpp
Tut08GettingOriented/: CMakeLists.txt  CameraRelative.cpp  GimbalLock.cpp  Interpolation.cpp  QuaternionYPR.cpp
framework/: CMakeLists.txt  Makefile  Mesh.cpp  Timer.cpp  empty.cpp  framework.cpp  framework.h
glsdk/: .gitignore  CMakeLists.txt
